Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59652

Non-modal Drawer does not drag/swipe open

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.2
    • 5.8.0, 5.9.1
    • Quick: Controls 2
    • None
    • Mac OSX Sierra 10.12.3, Qt 5.8
    • 3512d1b617fb66f13a01e8763e395fcf69b0b5b7

      I have an scenario for which I need a non modal drawer. So i set modal: false, but with this setting, it is not possible anymore to draw / swipe it open.

      Simplified application

      import QtQuick 2.7
      import QtQuick.Controls 2.0
      import QtQuick.Layouts 1.0
      
      ApplicationWindow {
          visible: true
          width: 640
          height: 480
          title: qsTr("Hello World")
      
          Drawer {
              modal: false
              width: 100
              height: parent.height
              dragMargin: 100
              Text {
                  text: "drawerContent"
              }
          }
      
          SwipeView {
              id: swipeView
              anchors.fill: parent
      
              Text {
                  text: 'Content'
              }
      
          }
      
      }
      

      Also tried this on a Windows 10 VM with Qt 5.8 and on Mac OSX with Qt 5.7.1, no difference...

        1. DrawerTest.zip
          3 kB
          Michal Policht
        2. DrawerTest.zip
          2 kB
          Michal Policht
        3. screenshot.png
          16 kB
          Michal Policht
        For Gerrit Dashboard: QTBUG-59652
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            bartel Bartel Eerdekens
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes